--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <title>Nordika - Agencia de Viajes Nórdicos | Descubre Escandinavia</title>
     <meta name="description" content="Explora los países nórdicos con Nordika: viajes a Suecia, Noruega, Dinamarca, Finlandia e Islandia. Aurora boreal, fiordos y cultura escandinava.">
     
@@ -236,22 +236,22 @@
         <div class="stats-container">
             <div class="stat-item">
                 <i class="fas fa-users"></i>
-                <h3 class="counter">2500</h3>
+                <h3 class="counter" data-target="2500">0</h3>
                 <p>Viajeros Felices</p>
             </div>
             <div class="stat-item">
                 <i class="fas fa-globe-europe"></i>
-                <h3 class="counter">5</h3>
+                <h3 class="counter" data-target="5">0</h3>
                 <p>Países Nórdicos</p>
             </div>
             <div class="stat-item">
                 <i class="fas fa-star"></i>
-                <h3 class="counter">98</h3>
+                <h3 class="counter" data-target="98">0</h3>
                 <p>% Satisfacción</p>
             </div>
             <div class="stat-item">
                 <i class="fas fa-award"></i>
-                <h3 class="counter">15</h3>
+                <h3 class="counter" data-target="15">0</h3>
                 <p>Años de Experiencia</p>
             </div>
         </div>
