--- a/HTML/Noruega/oslo.html
+++ b/HTML/Noruega/oslo.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="hero-image-destino">
-                    <img src="../../Imágenes/Noruega/oslo/oslo.jpg" alt="Oslo" class="hero-img-destino">
+                    <img src="../../Imágenes/Noruega/unnamed.jpg" alt="Oslo" class="hero-img-destino">
                 </div>
             </div>
             <div class="hero-overlay-destino"></div>
